fixed main content alignment

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -21,7 +21,7 @@ body {
 	grid-template-rows: auto;
 	grid-template-columns: 25% 25% 25% 25%;
 	grid-template-areas: 
-		". header header ."
+		"header header header header"
 		"social main main ."
 		"footer footer footer footer";
 	background-color: var(--background);
@@ -29,15 +29,11 @@ body {
 
 header {
 	grid-area: header;
-	width: 100%;
 	background-color: var(--blue);
 }
 
 main {
 	grid-area: main;
-	max-width: 37.5em;
-	max-width: 700px;
-	margin: 0 auto;
 }
 
 .social {
